# ambassadeurs

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  build.sh  lighthouserc.json  package-lock.json  package.json  pyproject.toml  render.yaml  tox.ini
.claude/: launch.json  settings.json
.claude/agents/: code-auditor.md  documenter.md  implementer.md  qa.md  reviewer.md  scoper.md  security-auditor.md
.claude/security-audits/: 2026-06-30-audit.md  2026-07-05-0555.md
.claude/workflows/: README.md  adversarial-code-review.js
.github/workflows/: ci.yml  e2e.yml  lighthouse.yml  security-audit.yml
accounts/: __init__.py  adapters.py  admin.py  apps.py  forms.py  models.py  services.py  tokens.py  urls.py  views.py
accounts/management/: __init__.py
accounts/migrations/: 0001_initial.py  0002_delete_account.py
billing/: __init__.py  admin.py  apps.py  forms.py  models.py
billing/migrations/: 0001_initial.py  0002_tip.py  0003_tip_unique_tip_stripe_payment_intent_id.py
billing/services/: checkout.py  payments.py  tips.py
config/: __init__.py  asgi.py  urls.py  urls_admin.py  urls_public.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  e2e.py  production.py
core/: __init__.py  admin.py  apps.py  context_processors.py  decorators.py  emails.py  exceptions.py  geo.py  hashing.py  i18n.py  marketing.py  middleware.py  models.py  observability.py  ratelimit.py  services.py  views.py
core/management/: __init__.py
core/migrations/: 0001_initial.py  0002_notification.py  0003_alter_notification_options_notification_enabled_and_more.py  0004_alter_notification_options_and_more.py
debug/: apps.py  context_processors.py  urls.py  views.py
docs/: glossary.md  lighthouse.md  state-machines.md
docs/code-reviews/: 2026-07-09-code-quality-plan.md
docs/decisions/: 0001-registration-model.md  0002-legal-pages.md  0003-facebook-registration.md  0004-verify-first-registration.md  0005-single-season-matching-engine.md  0006-form-download-tracking.md  0007-post-match-confirmation-workflow.md  0008-decline-email-hash-design.md  0009-reveal-partner-first-name.md  0009-withdraw-acceptance.md  0010-withdraw-acceptance.md  0011-two-state-machines.md  0012-geolocation-on-registration.md  0012-magic-link-login.md  0013-paused-registration-state.md  0014-deferred-matching-prepaid-fee.md  0015-compile-message-catalogues-at-deploy.md  0016-decoupled-catalogue-maintenance.md  0017-state-transition-model-service-split.md  0018-adopt-django-side-effects-for-notification-dispatch.md  0018-drop-transition-row-locks.md  0019-postgres-backed-test-lane.md  0019-structured-email-templates.md  0020-structured-email-templates.md  0021-settings-driven-notification-design.md  0022-admin-subdomain.md  0022-voluntary-tip-stripe-checkout.md  0023-server-side-marketing-attribution.md
docs/manual-tests/: manual-test-script.md  queue-visualisation.md  verb-149-homepage-queue.md
e2e/: .env.example  README.md  compose.yaml  fixtures.ts  package-lock.json  package.json  playwright.config.ts  run-local.sh  tsconfig.json
e2e/helpers/: app.ts  db.ts  mail.ts  manage.ts  scenarios.ts
e2e/reporters/: results-log.ts
e2e/tests/: 01-smoke.spec.ts  02-registration-login-account.spec.ts  03-matching.spec.ts  04-expiry.spec.ts  05-states-admin.spec.ts  06-notifications.spec.ts
matching/: __init__.py  admin.py  apps.py  forms.py  models.py  pricing_config.py  selectors.py  services.py  side_effects.py
matching/fixtures/: dev_season.json
matching/management/: __init__.py
matching/migrations/: 0001_initial.py  0002_add_accepted_terms_to_registration.py  0002_registration.py  0002_registration_fee_chf.py  0003_add_match_side_and_response_fields.py  0003_registration_flake_count_alter_registration_status.py  0003_rework_registration_add_match.py  0004_add_match_side_and_response_fields.py  0004_add_pending_status_to_registration.py  0005_add_pending_status_to_registration.py  0006_add_decline_hash_and_prior_decline_count.py  0007_verb44_update_status_enums.py  0008_registration_nationality.py  0008_verb49_add_geo_fields.py  0009_verb49_add_geo_fields.py
public/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  sitemaps.py  urls.py  views.py
public/migrations/: 0001_initial.py  0002_surveyresponse.py
public/views/: __init__.py  _shared.py  match.py  pages.py  payments.py  registration.py  survey.py  tips.py
src/css/: main.css
templates/: 403.html  404.html  429.html  500.html  base.html
templates/account/: confirm_login_code.html  email_confirm.html  login.html  logout.html  request_login_code.html
templates/accounts/: delete.html  detail.html  edit.html  login.html  login_invalid.html  login_sent.html  login_verify.html  logout.html
templates/debug/: components.html
templates/email/: base.html  confirmation_body.txt  confirmation_subject.txt  login_body.txt  login_subject.txt
templates/includes/: _button.html  _card.html  _facebook_button.html  _field.html  _meta.html  _queue_snapshot.html  _status_pill.html  _tip_panel.html  footer.html  nav.html  notification_strip.html
templates/public/: about.html  colophon.html  faq.html  home.html  how_it_works.html  match.html  match_forbidden.html  match_invalid.html  match_removed.html  queue_snapshot.html  register.html  register_closed.html  register_details.html  register_done.html  register_email_sent.html  register_forbidden.html  register_invalid.html  register_payment_cancelled.html  register_payment_pending.html  register_role.html  register_start.html  tip.html  tip_cancelled.html  tip_thanks.html
templates/socialaccount/: authentication_error.html  login.html  signup.html
tests/accounts/: factories.py  test_adapters.py  test_commands.py  test_models.py  test_ratelimit.py  test_services.py  test_tokens.py  test_views.py
tests/billing/: factories.py  test_admin.py  test_checkout.py  test_forms.py  test_models.py  test_payments.py  test_tips.py
tests/core/: factories.py  test_admin.py  test_commands.py  test_context_processors.py  test_decorators.py  test_emails.py  (+9 more)
(+86 files in other folders)
