# Project metadata and tooling configuration for the Ambassadeurs app.
#
# pyproject.toml is the single source of truth for dependencies (PEP 621
# `[project]` + PEP 735 `[dependency-groups]`); the resolved set is pinned in
# uv.lock. See CLAUDE.md "Dependency management".

[project]
name = "ambassadeurs"
version = "0.1.0"
description = "Partner matchmaking for the 4 Vallees Ambassadors Program."
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7,<6.1",
    "django-htmx>=1.21",
    "python-decouple>=3.8",
    "whitenoise>=6.7",
    "dj-database-url>=2.2",
    "psycopg[binary]>=3.2",
    "gunicorn>=23.0",
    "django-countries>=9.0.0",
    "geoip2>=5.2.0",
    "django-ratelimit>=4.1.0",
    "django-csp>=4.0",
    "posthog>=7.21.2",
    "stripe>=15.3.0",
    "django-side-effects>=3.2.0",
    "nh3>=0.3.6",
    "django-utm-tracker>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    # Cap mypy below 2.0 — django-stubs' plugin does not yet load under mypy 2.x.
    "mypy>=1.13,<2",
    "django-stubs[compatible-mypy]>=5.1",
    "ruff>=0.8",
    "djangofmt>=0.2.10",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
    "tox>=4.23",
    "tox-uv>=1.16",
    "semgrep>=1.168.0",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes; I: isort; UP: pyupgrade; B: bugbear;
# DJ: flake8-django; C4: comprehensions; S: bandit (security).
select = ["E", "F", "I", "UP", "B", "DJ", "C4", "S"]

[tool.ruff.lint.per-file-ignores]
# Assertions and hard-coded test data are expected in the test suite.
"tests/**" = ["S101", "S106"]
"**/migrations/**" = ["E501"]
# Service functions use assertions to enforce FK invariants (non-null on
# PROPOSED/ACCEPTED matches) after the nullable-FK migration; these are
# genuine runtime guards, not test-only checks.
"matching/services.py" = ["S101"]
# The side-effect handlers (VERB-107) use the same FK-invariant assertions,
# plus one isinstance() assertion narrowing return_value's Any type.
"matching/side_effects.py" = ["S101"]
# Debug helpers use assertions to enforce the same FK invariants.
"debug/views.py" = ["S101"]

[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_unused_ignores = true
# Generated migrations and the settings package are not worth type-gating.
exclude = ['(^|/)migrations/', '^config/settings/']

[[tool.mypy.overrides]]
module = [
    "factory.*",
    "decouple.*",
    "django_ratelimit.*",
    "side_effects.*",
    "utm_tracker.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# ModelAdmin/InlineModelAdmin and form fields (ModelChoiceField) are generic
# only for type-checkers; subscripting them at runtime fails, so these classes
# stay unparametrised.
module = ["*.admin", "matching.forms"]
disallow_any_generics = false

[[tool.mypy.overrides]]
# django-side-effects (VERB-107 / ADR 0018) ships no py.typed marker or
# stubs, so @has_side_effects / @is_side_effect_of are seen as untyped
# decorators and erase the return type of every function they wrap
# (untyped-decorator). Scoped to the two modules that use the decorators,
# not a blanket project-wide relaxation.
module = ["matching.services", "matching.side_effects"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# Settings modules are dynamic (env-driven) and not worth type-gating.
module = ["config.settings.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# The test factories are followed (not checked) because seed_test_data builds
# its rows through them. They pre-date strict mode; suppress error reporting
# while keeping their .create() return types visible to the command.
module = ["tests.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pyright]
# Pyright is used ONLY as the language server behind the reviewer agent's LSP
# tool (go-to-definition, find-references, hover, call hierarchy) — never as a
# type gate. mypy + django-stubs (above) remains the sole type authority, run
# via `tox -e mypy` in CI. Point pyright at the uv venv so Django and its stubs
# resolve (otherwise every `django.*` import reads as unresolved), and turn
# type-checking OFF so pyright's own inference — which does not load the
# django-stubs mypy plugin and so false-positives on TextChoices/ORM typing —
# cannot surface findings that disagree with mypy. Navigation and hover still
# work with type-checking off.
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"
exclude = [".claude", "**/.tox", "**/node_modules", ".venv", "**/migrations"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["core", "accounts", "billing", "matching", "public"]
omit = ["*/migrations/*", "*/tests/*", "tests/*", "*/apps.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
